--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,11 @@
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemon": "^3.0.1",
     "rand-token": "^1.0.1",
     "serve": "^14.2.1"
+  },
+  "scripts": {
+    "start": "nodemon ./index.js"
   }
 }
